test/spec_vectors/i64/fail/module_9.wat
(module (func (result i64) (i64.rotl (i32.const 0) (f32.const 0))))